# gaia

./: .env.example  .gitignore  README.md  analyze_results.py  app.py  extract.py  fix_invoke.py  fix_prompt3.py  pyproject.toml  requirements.txt  run_question.py  submit_cached.py  test_t11.py  test_t11_2.py  test_t20.py  test_t20_2.py  test_t20_3.py  test_t20_4.py  test_t20_5.py  test_t20_6.py  test_t9.py
docs/architecture/: gaia-langgraph-agent.md
scripts/: bootstrap.sh  package_clean.ps1  package_clean.sh
src/hf_gaia_agent/: __init__.py  api_client.py  botanical_aliases.py  botanical_classification.py  cli.py  evidence_solver.py  graph.py  hooks.py  normalize.py  runner.py  source_pipeline.py  tools.py
src/hf_gaia_agent/adapters/: __init__.py  base.py  temporal_roster.py
src/hf_gaia_agent/core/: __init__.py
src/hf_gaia_agent/fallbacks/: __init__.py  article_to_paper.py  base.py  botanical.py  competition.py  role_chain.py  roster.py  text_span.py  utils.py
src/hf_gaia_agent/graph/: __init__.py  answer_policy.py  candidate_support.py  contracts.py  evidence_support.py  finalization_rules.py  finalizer.py  nudges.py  prompts.py  retry_rules.py  routing.py  services.py  state.py  tool_policy.py  workflow.py
src/hf_gaia_agent/reducers/: __init__.py  _constants.py  _parsing.py  (+7 more)
tests/: conftest.py  test_api_client.py  test_architecture_refactor.py  test_audio_tools.py  test_botanical_classification.py  test_cli.py  test_evidence_solver.py  test_graph.py  test_graph_services.py  test_normalize.py  test_search_tools.py  test_source_pipeline.py  test_tools.py
(+40 files in other folders)
