[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hf-gaia-agent"
version = "0.1.0"
description = "LangGraph agent for the Hugging Face Agents Course Unit 4 GAIA challenge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mauri" }]
dependencies = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "duckduckgo-search>=6.3.0,<7.0.0",
  "httpx>=0.27.0,<0.29.0",
  "langchain-core>=0.3.0,<0.4.0",
  "langchain-openai>=0.2.0,<0.3.0",
  "langgraph>=1.0.0,<2.0.0",
  "pypdf>=5.0.0,<6.0.0",
  "tavily-python>=0.5.0,<1.0.0",
  "youtube-transcript-api>=0.6.3,<1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0.0"]

[project.scripts]
hf-gaia-agent = "hf_gaia_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_gaia_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
